Fix manifest to recursively include files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include fourhills/templates/*
-include fourhills/gui/templates/*
+recursive-include fourhills/templates *
+recursive-include fourhills/gui/templates *
